--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,1 @@
-{
-  "background_color": "#ffffff",
-  "description": "Calcular precios en cup",
-  "dir": "ltr",
-  "display": "standalone",
-  "name": "Generador de Precios en CUP",
-  "orientation": "portrait",
-  "scope": "/",
-  "short_name": "MXN a CUP",
-  "start_url": "/",
-  "theme_color": "#4caf50",
-  "categories": [
-    "finance"
-  ],
-  "screenshots": [],
-  "icons": [],
-  "shortcuts": [],
-  "lang": "es"
-}
+{"short_name":"Mxn-Cup","name":"MXN a CUP","icons":[{"src":"/assets/img/Logo%20mxn-cup%20192.png","type":"image/png","sizes":"192x192"},{"src":"/assets/img/Logo%20mxn-cup%20512.png","type":"image/png","sizes":"512x512"}],"start_url":"https://ranset.github.io/mxn-to-cup/","theme_color":"#4caf50","display":"standalone","orientation":"portrait"}
